--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
      <link rel="stylesheet" href="style.css">
          <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="./icon/css/all.min.css">
+<link
+rel="stylesheet"
+href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/<a href="https://www.alticreation.com/meilleures-ressources-css/" data-internallinksmanager029f6b8e52c="5" title="ressources CSS">css</a>/all.min.css" 
+/>
      <title></title>
    </head>
    <body>
