--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link
 rel="stylesheet"
-href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/<a href="https://www.alticreation.com/meilleures-ressources-css/" data-internallinksmanager029f6b8e52c="5" title="ressources CSS">css</a>/all.min.css" 
-/>
+href="https://github.com/FortAwesome/Font-Awesome"/>
      <title></title>
    </head>
    <body>
