--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
      <link rel="stylesheet" href="style.css">
          <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link
-rel="stylesheet"
-href="https://github.com/FortAwesome/Font-Awesome"/>
+    <script src="https://kit.fontawesome.com/3b9af339fb.js" crossorigin="anonymous"></script>
      <title></title>
    </head>
    <body>
