--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
      <link rel="stylesheet" href="style.css">
          <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
+     <link rel="stylesheet" href="./icon/css/all.min.css">
      <title></title>
    </head>
    <body>
@@ -21,11 +21,16 @@
                   <a href="#exper">  <li>Expérience</li></a>
                   <a href="#ini">  <li>Initiatives</li></a>
                   <a href="#proj">  <li>Projets</li></a>
+                  <i id="home" class="fas fa-align-justify"></i>
                  </ul>
             </header>
             <br><br><br>
             <div id="banniere">
-    <h2>Visitez Mon PORFOLIO</h2>
+    <h2>
+
+      <img src="image/logo.svg" alt="">
+
+    </h2>
     <br>
     <a href="#footer"> <button id="decouvrir">Decouvrir</button> </a>
 
@@ -82,8 +87,7 @@
                   <h2>Integration Web Avec HTML5 / CSS3</h2>
                   <p>
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                   incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                   exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat..</p>
+                   incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,..</p>
 
                 </div>
 
@@ -98,8 +102,7 @@
                 <h2>DYnamisez Vous sites Web avec du JS</h2>
                 <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                 exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat..</p>
+                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,t..</p>
 
               </div>
 
@@ -114,8 +117,7 @@
                 <h2>Faites le BACK END de vos plateformes avec PHP</h2>
                 <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                 exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat..</p>
+                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,..</p>
 
               </div>
 
@@ -199,9 +201,9 @@
 </div>
 <div id="description">
  <h4>APPLICATION WEB DE GESTION DES ECOLES </h4>
+  <br>
  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-   tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-   quis nostrud  </p>
+   tempor  </p>
 
 </div>
 
@@ -210,9 +212,9 @@
 
   <div id="description">
     <h4>APPLICATION WEB DE GESTION DES ETATS DE TRANSACTION ORANGE/MTN  </h4>
+     <br>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud  </p>
+      tempor incididunt  </p>
 
   </div>
   <div id="num">
@@ -226,9 +228,9 @@
   </div>
   <div id="description">
  <h4>APPLICATION WEB DE PHOTOGRAPHE </h4>
+
  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-   tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-   quis nostrud  </p>
+   tempor incididunt  </p>
   </div>
 
 </div>
@@ -290,9 +292,22 @@
                 <br>
 
                 <a href="#banniere" id="fleche"><button id="fl"><i class="fas fa-arrow-up"></i>  </button> </a>
+               <div id="homebar">
 
+                                                   <ul>
+                                          <i style="font-size:35px" id="close" class="fas fa-times"></i> 
+                                                    <a href="">  <li>Accuiel</li></a>
+                                                    <a href="">  <li>Competences</li></a>
+                                                    <a href="">  <li>Expérience</li></a>
+                                                    <a href="">  <li>Initiatives</li></a>
+                                                    <a href="">  <li>Projets</li></a>
+                                                    <!-- <i id="home" class="fas fa-align-justify"></i> -->
+                                                   </ul>
+
+
+
+               </div>
    </body>
-   <script src="https://kit.fontawesome.com/3b9af339fb.js" crossorigin="anonymous"></script>
    <script src="./scrollreveal.js"></script>
    <script src="./scrollreveal.min.js"></script>
    <script src="./script.js"></script>
