--- a/index.html
+++ b/index.html
@@ -308,6 +308,8 @@
 
                </div>
    </body>
+   <script src="https://kit.fontawesome.com/3b9af339fb.js" crossorigin="anonymous"></script>
+
    <script src="./scrollreveal.js"></script>
    <script src="./scrollreveal.min.js"></script>
    <script src="./script.js"></script>
