--- a/index.html
+++ b/index.html
@@ -86,8 +86,9 @@
                 <div id="contenu">
                   <h2>Integration Web Avec HTML5 / CSS3</h2>
                   <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                   incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,..</p>
+                   Le developpement de beaux  sites web statiques  avec HTML5 CSS3 
+                   dans des delais très  satisfaissant
+                 </p>
 
                 </div>
 
@@ -99,10 +100,10 @@
 
               </span>
               <div id="contenu">
-                <h2>DYnamisez Vous sites Web avec du JS</h2>
+                <h2>Dynamisez Vos sites Web avec du Javascript</h2>
                 <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,t..</p>
+               A partir de javascript je donne des apparences intéressantes a travers des animations et plein d autres choses
+                 permettant d améliorer l expérience utilisateur de votre site web</p>
 
               </div>
 
@@ -115,9 +116,7 @@
               </span>
               <div id="contenu">
                 <h2>Faites le BACK END de vos plateformes avec PHP</h2>
-                <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,..</p>
+                <p> Grace a PHP je crée des applications web ainsi que des sites web utilisant des bases de données.</p>
 
               </div>
 
@@ -202,8 +201,7 @@
 <div id="description">
  <h4>APPLICATION WEB DE GESTION DES ECOLES </h4>
   <br>
- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-   tempor  </p>
+ <p>Applications permettant la gestion des éffectifs des livraions d une école ou d'un établissement </p>
 
 </div>
 
@@ -213,8 +211,9 @@
   <div id="description">
     <h4>APPLICATION WEB DE GESTION DES ETATS DE TRANSACTION ORANGE/MTN  </h4>
      <br>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt  </p>
+    <p>
+   Applications permettant la gestion des états des transactions quotidiennent effectuées dans les différents services tel  que ORANGE et MTN ceci permettant de connaitre 
+   quotidiennement la situation financière de l entreprise.</p>
 
   </div>
   <div id="num">
@@ -229,8 +228,7 @@
   <div id="description">
  <h4>APPLICATION WEB DE PHOTOGRAPHE </h4>
 
- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-   tempor incididunt  </p>
+ <p> cette application permet au personne filmés dans une laboratoire photo de les recupérer a partir d'un code donné par le photographe et emis par l'application </p>
   </div>
 
 </div>
