--- a/index.html
+++ b/index.html
@@ -217,8 +217,7 @@
     <h4>APPLICATION WEB DE GESTION DES ETATS DE TRANSACTION ORANGE/MTN  </h4>
      <br>
     <p>
-   Applications permettant la gestion des états des transactions quotidiennent effectuées dans les différents services tel  que ORANGE et MTN ceci permettant de connaitre 
-   quotidiennement la situation financière de l entreprise.</p>
+   Applications permettant la gestion des états des transactions quotidiennent effectuées dans les différents services tel  que ORANGE et MTN </p>
 
   </div>
   <div id="num">
